# Optimizer

./: .gitignore  README.MD  build.bat  memoryclean.bat  optop.ps1  pyproject.toml  requirements.txt
scripts/: build.py  gui_launcher.py  run_as_admin.ps1  run_optimizer.bat  setup.bat  uninstall.bat
src/: __init__.py  gui.py  main.py
src/cli/: __init__.py  optimize.py  utils.py
src/core/: __init__.py  backup.py  logger.py
src/core/optimizers/: __init__.py  hardcore_optimizer.py  optional_optimizer.py  safe_optimizer.py
src/ui/: __init__.py  __main__.py  branding.py  console.py
