[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruddibaba-optimizer"
version = "0.1.0"
description = "A powerful Windows optimization tool with multiple optimization levels"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Ruddibaba", email = "ruddibaba@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pywin32>=300;platform_system=='Windows'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
ruddibaba-optimizer = "ruddibaba_optimizer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[project.urls]
Homepage = "https://github.com/yourusername/ruddibaba-optimizer"
Bug Tracker = "https://github.com/yourusername/ruddibaba-optimizer/issues"
